--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "isomorphic-fetch": "^3.0.0",
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -27,7 +28,8 @@
     "react-router-dom": "^7.1.3",
     "recharts": "^2.15.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "url": "^0.11.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
